Updated bio in about page

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -52,12 +52,12 @@
                                 <img src="../images/headshot.jpg" alt="professional headshot">
                                 <h1>WHO I AM</h1>
                             </div>
-                            <p>Born and raised in Vancouver, BC, Matt is a particularly hard working individual who has been practicing software development for the past 3 years. </p>
-
-                            <p> Recently his focus has been on learning Node.js, React.js and ES6. He enjoys working in teams, and collaborating to solve problems with new and exciting technology. </p>
-
-                            <p>His past experience has been primarily working with smaller companies helping them with various aspects of Product Design, Project Management and Software Development. Matt enjoys wearing many hats, but identifies as full-stack
-                                developer. </p>
+                            <p>I am a full-stack developer based out of Vancouver, BC who works local
+                                with start ups, helping with anything from  Product Design, to DevOps,
+                                 to UI/UX.   Always looking to improve myself and the world around me.</p>
+                            <p>Recently my focus has been on learning Node.js, React.js and ES6.
+                                Strong foundation in OOP and MVC design patterns.</p>
+                            <p>When I am not working I can be found at the beach, and/or playing my guitar.</p>
                         </div>
 
                         <div class="right-column clearfix col-xs-12 col-sm-6 light-grey">
