updated linkedIn url

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -86,7 +86,7 @@
                         <h1> Find me on:</h1>
                         <div class="socail-icons center clearfix">
                             <div class="icon darkblue">
-                                <a href="https://ca.linkedin.com/in/matthew-catellier-06995167"> <i class="fa fa-linkedin"></i> </a>
+                                <a href="https://www.linkedin.com/in/matt-catellier"> <i class="fa fa-linkedin"></i> </a>
                             </div>
                             <div class="icon darkblue">
                                 <a href="https://github.com/matt-catellier" class="github"> <i class="fa fa-github"></i> </a>
@@ -146,7 +146,7 @@
                         <h1> Find me on:</h1>
                         <div class="socail-icons center clearfix">
                             <div class="icon darkblue">
-                                <a href="https://www.linkedin.com/in/matt-catellier-06995167"> <i class="fa fa-linkedin"></i> </a>
+                                <a href="https://www.linkedin.com/in/matt-catellier"> <i class="fa fa-linkedin"></i> </a>
                             </div>
                             <div class="icon darkblue">
                                 <a href="https://github.com/matt-catellier" class="github"> <i class="fa fa-github"></i> </a>
