Fixed small grammar errors

--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -53,7 +53,7 @@
                             <h4 id="info-heading">CONTACT INFO</h4>
                             <div class="contact-info">
                                 <div class="icon linked darkblue">
-                                    <a href="https://ca.linkedin.com/in/matthew-catellier-06995167">
+                                    <a href="https://ca.linkedin.com/in/matt-catellier">
                                         <i class="fa fa-linkedin"></i>
                                     </a>
                                 </div>
