--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -99,7 +99,7 @@
                     <div class="welcome-block block col-lg-3 visible-lg teal">
                         <div class="welcome col-sm-12">
                             <h1> HEY! </h1>
-                            <h2> Lets build something great!</h2>
+                            <h2> Let's build something great!</h2>
                         </div>
                     </div>
                     <div id="portfolio-block" class="block col-xs-12 col-sm-6 col-lg-3 white">
