More grammar changes

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -52,7 +52,7 @@
                                 <img src="../images/headshot.jpg" alt="professional headshot">
                                 <h1>WHO I AM</h1>
                             </div>
-                            <p>I am a full-stack developer based out of Vancouver, BC who works with local
+                            <p>I am a full-stack developer based out of Vancouver, BC that works with local
                                 start ups, helping with anything from  Product Design, to DevOps,
                                  to UI/UX.   Always looking to improve myself and the world around me.</p>
                             <p>Recently my focus has been on learning Node.js, React.js and ES6.
